--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,9 +19,17 @@
   }
 }
 
+html {
+  /* scrollbar-gutter: stable; */
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-  scrollbar-gutter: stable both-edges;
+  /* scrollbar-gutter: stable; */
+}
+
+@utility scrollbar-gutter-stable {
+  scrollbar-gutter: stable;
 }
